# om-health-check

./: .gitignore  CLAUDE.md  LICENSE  METRICS.md  README.md  om-health-check-standalone.py  pyproject.toml
examples/: all-thresholds.yaml  low-thresholds.yaml
prompts/: replica-set.md  sharded-cluster.md
src/om_health_check/: __init__.py  baseline.py  cli.py  client.py  concurrency.py  config.py  models.py  runner.py  thresholds.py
src/om_health_check/checks/: backup.py  cache.py  compute.py  connections.py  connectivity.py  disk.py  oplog.py  replication.py  version.py  workload.py
src/om_health_check/renderers/: html.py  json_renderer.py  txt.py
tests/: conftest.py  test_baseline.py  test_example_config.py  test_models.py  test_runner.py  test_standalone_parity.py
tests/test_checks/: test_backup.py  test_cache.py  test_compute.py  test_connections.py  test_connectivity.py  test_disk.py  test_oplog.py  test_replication.py  test_version.py  test_workload.py
tests/test_renderers/: test_html.py  test_json.py  test_txt.py
