[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "om-health-check"
version = "0.6.0"
description = "Automated MongoDB cluster health checks via the Ops Manager API — for incident triage and proactive review."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
authors = [
    {name = "Frank Snow"}
]
maintainers = [
    {name = "Frank Snow"}
]
keywords = [
    "mongodb",
    "ops-manager",
    "health-check",
    "monitoring",
    "incident-response",
    "database",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "opsmanager>=0.5.3",
    "jinja2>=3.0",
    "packaging>=21.0",
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/fsnow/om-health-check"
Documentation = "https://github.com/fsnow/om-health-check#readme"
Repository = "https://github.com/fsnow/om-health-check.git"
Issues = "https://github.com/fsnow/om-health-check/issues"

[project.scripts]
om-health-check = "om_health_check.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
